Creación de pagina admin con interacción

--- a/index.html
+++ b/index.html
@@ -4,9 +4,62 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Style-Me-Up</title>
+    <link rel="stylesheet" href="scss/style.css">
 </head>
 <body>
-    <h1>Hola Mundo</h1>
-    <script src="./main.js"></script>
+    <header id="header">
+        <h1>Shopping Remeras</h1> 
+        <img class="carrito" src="Image/carritodecompras.png" alt="carrito">
+    </header>
+    <div id="contenedor" class="contenedor">
+        <div>
+            <img src="Image/remera.png" alt="producto 1">
+            <div class="informacion">
+                <p>Producto 1</p>
+                <p class="precio">$199<span>.99</span></p>
+                <button>Comprar</button>
+            </div>
+        </div>
+        <div>
+            <img src="Image/remera2.png" alt="producto 2">
+            <div class="informacion">
+                <p>Producto 2</p>                   
+                <p class="precio">$299<span>.99</span></p>
+                <button>Comprar</button>
+            </div>
+        </div>
+        <div>
+            <img src="Image/remera3.png" alt="producto 3">
+            <div class="informacion">
+                <p>Producto 3</p>                   
+                <p class="precio">$399<span>.99</span></p>
+                <button>Comprar</button>
+            </div>
+        </div>
+        <div>
+            <img src="Image/remera4.png" alt="producto 4">
+            <div class="informacion">
+                <p>Producto 4</p>                   
+                <p class="precio">$499<span>.99</span></p>
+                <button>Comprar</button>
+            </div>
+        </div>
+        <div>
+            <img src="Image/remera5.png" alt="producto 5">
+            <div class="informacion">
+                <p>Producto 5</p>                   
+                <p class="precio">$599<span>.99</span></p>
+                <button>Comprar</button>
+            </div>
+        </div>
+        <div>
+            <img src="Image/remera6.png" alt="producto 6">
+            <div class="informacion">
+                <p>Producto 6</p>                   
+                <p class="precio">$699<span>.99</span></p>
+                <button>Comprar</button>
+            </div>
+        </div>
+    <script src="main.js"></script>
 </body>
 </html>
